--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "concurrently": "^7.3.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-openid-connect": "^2.8.0",
+    "firebase": "^9.9.3",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
