Followed this https://medium.com/@rgoyard/how-to-deploy-a-single-page-application-and-its-backend-to-google-app-engine-353ff93bd38c

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,10 +18,14 @@ steps:
     ]
 
   - name: "gcr.io/cloud-builders/gcloud"
-    args: ["app", "deploy", "dispatch.yaml"]
+    args: ["app", "deploy", "client.yaml"]
 
   - name: "gcr.io/cloud-builders/gcloud"
-    args: ["app", "deploy", "app.yaml"]
+    args: ["app", "deploy", "api.yaml"]
+
+  - name: "gcr.io/cloud-builders/gcloud"
+    args: ["app", "deploy", "dispatch.yaml"]
+
 
 availableSecrets:
   secretManager: 
