--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -1,3 +1,4 @@
 dispatch:
-  -url: "*/api/*"
-  service: API
+    # Send all trafic on /api to api service.
+    - url: '*/api/*'
+      service: api
