--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "concurrently": "^7.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-openid-connect": "^2.8.0",
