Testing changes with the build files

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,14 +18,7 @@ steps:
     ]
 
   - name: "gcr.io/cloud-builders/gcloud"
-    args: ["app", "deploy", "client.yaml"]
-
-  - name: "gcr.io/cloud-builders/gcloud"
-    args: ["app", "deploy", "api.yaml"]
-
-  - name: "gcr.io/cloud-builders/gcloud"
-    args: ["app", "deploy", "dispatch.yaml"]
-
+    args: ["app", "deploy", "client.yaml", "dispatch.yaml", "api.yaml"]
 
 availableSecrets:
   secretManager: 
