Using a different blog to serve static react files to the server

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,7 +18,7 @@ steps:
     ]
 
   - name: "gcr.io/cloud-builders/gcloud"
-    args: ["app", "deploy", "client.yaml", "dispatch.yaml", "api.yaml"]
+    args: ["app", "deploy", "api.yaml"]
 
 availableSecrets:
   secretManager: 
