--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -1,7 +1,1 @@
-dispatch:
-    # Send all trafic on /api to api service.
-    - url: '*/api/*'
-      service: api
-
-    - url: "*/*"
-      service: frontend
+dispatch: []
