--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -31,7 +31,7 @@
     "include": [
         "./**/*.ts",
         "./**/*.tsx"
-    ],
+, "../backend/server.ts"    ],
     "exclude": [
         "node_modules/**/*"
     ],
