--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,11 +2,13 @@ steps:
   #Handle frontend build
   - name: gcr.io/cloud-builders/npm
     entrypoint: npm
-    args: ['--prefix', './frontend' ,'install']
+    dir: '/frontend'
+    args: ['install']
 
   - name: gcr.io/cloud-builders/npm
     entrypoint: npm
-    args: ['--prefix', './frontend', 'run', 'build']
+    dir: '/frontend'
+    args: ['run', 'build']
     secretEnv: [
       'REACT_APP_MAPS_API_KEY',
       'REACT_APP_FIREBASE_API_KEY',
@@ -20,14 +22,15 @@ steps:
   #Handle the backend build
   - name: gcr.io/cloud-builders/npm
     entrypoint: npm
-    args: ['--prefix', './backend' ,'install']
+    dir: '/backend'
+    args: ['install']
     secretEnv:
       - "G_GEOCODING_API_KEY"
 
 
   # Build both frontend and backend
   - name: "gcr.io/cloud-builders/gcloud"
-    args: ["app", "deploy", "/frontend/client.yaml", "/backend/api.yaml"]
+    args: ["app", "deploy", "frontend/client.yaml", "backend/api.yaml"]
 
 availableSecrets:
   secretManager: 
