--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.ts",
+    "start": "ts-node server.ts",
+    "start-dev": "nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,5 +18,6 @@
     "express-openid-connect": "^2.8.0",
     "nodemon": "^2.0.19",
     "typescript": "^4.8.2"
-  }
+  },
+  "type": "module"
 }
