Testing some stuff

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -30,8 +30,7 @@
         
     "include": [
         "./**/*.ts",
-        "./**/*.tsx"
-, "../backend/server.ts"    ],
+        "./**/*.tsx"],
     "exclude": [
         "node_modules/**/*"
     ],
