--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,8 @@
     "typescript": "^4.8.2"
   },
   "scripts": {
-    "start": "ts-node server.ts",
-    "start-dev": "nodemon server.ts",
+    "start": "node server.js",
+    "start-dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
