--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,27 +5,18 @@
             "ESNext",
             "dom"
         ], // specifies which default set of type definitions to use ("DOM", "ES6", etc)
-        "outDir": "lib", 
-        "removeComments": true, 
         "target": "ES6", 
 
         // Module resolution
         "baseUrl": "./",
         "esModuleInterop": true, 
         "moduleResolution": "node",
-        "paths": {}, 
-
-        // Strict Checks
-        "allowUnreachableCode": false, 
 
         // Linter Checks
-        "noImplicitReturns": true,
-        "noUncheckedIndexedAccess": true, 
-        "noUnusedLocals": true,
-        //"noUnusedParameters": true,
+        "noImplicitReturns": false,
 
         "jsx": "react-jsx",
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
         },
         
     "include": [
