--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/secretsecret-manager": "^4.1.1",
     "@googlemaps/google-maps-services-js": "^3.3.16",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
@@ -13,8 +14,8 @@
     "typescript": "^4.8.2"
   },
   "scripts": {
-    "start": "node server.js",
-    "start-dev": "nodemon server.js",
+    "start": "ts-node server.ts",
+    "start-dev": "nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
