--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.1",
     "express-openid-connect": "^2.8.0",
     "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
   "scripts": {
