manually running the app on build

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,8 +24,11 @@ steps:
     entrypoint: npm
     dir: 'backend'
     args: ['install']
-    secretEnv:
-      - "G_GEOCODING_API_KEY"
+
+  - name: gcr.io/cloud-builders/npm
+    entrypoint: npm
+    dir: 'backend'
+    args: ['start']
 
   # Build both frontend and backend
   - name: "gcr.io/cloud-builders/gcloud"
