--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "type": "module"
+  "license": "ISC"
 }
