--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,14 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-openid-connect": "^2.8.0",
-    "nodemon": "^2.0.19",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "nodemon": "^2.0.19"
   },
   "scripts": {
-    "start": "ts-node server.ts",
-    "start-dev": "nodemon server.ts",
+    "start": "node server.js",
+    "start-dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "module"
 }
